- Fixed a crash in the help overlay, when highlighted widgets are 
  deleted before the overlay can show.
- Fixed a bug that prevented projects from being saved, when a rename was requested
  but the folder failed to rename.
- Fixed a crash when loading scene nodes which are not linked to a scene because of
  faulty project configuration.

New Features:
- Added the possibility to configure the Layout of the Player for the project as a whole.
- Created an Auto-Updater for Windows.
- Added the ability to configure the predominantly used hand. This is taken into 
  account in the default Player Layouts.
- Added a new in-built Layout that wastes less screen real estate.
- Added the possibility to connect to sex toys and issue commands to sex toys in a tease.
  - Added a Buttplug.io device client to connect to toys via Initface.
- Added an event communication mechanism to the script interface via the PlayerEventCommunicator.
  This lets a Script communicate and exchange data with the Layout.

Changes:
- Changed debug-view to a layout with splitter to support resizing the debugger.
- Updated the Script Editor with a lot of new features:
  - Better code folding.
  - Color coded matching of braces, brackets and paratheses.
  - Highlighting of selected word.
  - Toolbar at the bottom.
  - Better input completion.
- Scenes now allow to select an existing Script Resource instead of having to create
  a new one.
- Script files reload without a user prompt if changed externally and not changed in 
  the Editor.

Fixed Bugs:
- Fixed a few UI typos.
- Fixed a crash that occured if a project was loaded that contained a resource of
  an unknown type.

=================
Version 1.3.1.0
=================

Fixed Bugs:
- Fixed an error introduced in 1.3.0 with parsing notification.show() arguments resulting
  in not starting onButton scripts in certain calls.
- Fixed a crash that occured when opening a project with an eos Script in first place
  of the Script list.